Install aiogram and python-dotenv

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ packages = [{include = "weather_telegram_bot"}]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+aiogram = "^2.25.1"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
